--- a/code/public/parts/home/home.html
+++ b/code/public/parts/home/home.html
@@ -2,11 +2,10 @@
 <header-top></header-top>
 
 <article>
-
-    <h1>List Resumes</h1>
-    
+    <h4 data-ng-if="!$ctrl.items && !$ctrl.items.length">The list is empty! You must registration and you will have header.</h4>
+    <button ng-if="$ctrl.Authorization()" type="button" class="btn btn-primary" ng-click="$ctrl.findMe()">Find me</button>
     <ol>
-        <li data-ng-repeat="header in $ctrl.headers">
+        <li data-ng-repeat="header in $ctrl.items">
             <h2>
                 <a ng-href="{{'#/resume/'+ header._id}}">
                     <strong ng-bind="header.position"></strong>
@@ -18,4 +17,6 @@
             <p><strong>Created: </strong><span ng-bind="header.created_at"></span></p>
         </li>
     </ol>
+
+    <pagination></pagination>
 </article>
