--- a/code/public/parts/header/header.html
+++ b/code/public/parts/header/header.html
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">IT Summary</a>
+                <a class="navbar-brand" ng-href="{{originPath()}}">IT Summary</a>
             </div>
             <div class="collapse navbar-collapse" ng-class="{'show': openTopMenu ? true : false}">
                 <ul class="nav navbar-nav" ng-if="$ctrl.routeParams">
