--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -19,7 +19,7 @@
         <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <title>My Best Resume -> Dev</title>
+        <title>Front-End Summary</title>
 
     </head>
 
