--- a/code/public/parts/front/front.html
+++ b/code/public/parts/front/front.html
@@ -1,7 +1,7 @@
 
 <header-top></header-top>
 
-<article>
+<article ng-class="{'loader-gif': $ctrl.loaderCheck()}">
   <h1 ng-bind="$ctrl.header.position"></h1>
   <p>
       <strong>Name: </strong>
