--- a/code/public/index.html
+++ b/code/public/index.html
@@ -16,7 +16,7 @@
     <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>My Best Resume -> Prod</title>
+    <title>Front-End Summary</title>
 
 </head>
 
