changes for load-script

--- a/code/dev/parts/load-script/load.script.html
+++ b/code/dev/parts/load-script/load.script.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body" id="modal-body">
 
-  <style ng-bind-html="$ctrl.script.css"></style>
+  <div ng-bind-html="$ctrl.script.css"></div>
   <div ng-bind-html="$ctrl.script.html"></div>
   <div bind-html-with-js="$ctrl.script.js | htmlCode"></div>
 
