--- a/code/public/parts/load-script/load.script.html
+++ b/code/public/parts/load-script/load.script.html
@@ -3,8 +3,8 @@
 </div>
 <div class="modal-body" id="modal-body">
 
-  <style ng-bind-html="$ctrl.script.css"></style>
-  <div ng-bind-html="$ctrl.script.html"></div>
+  <div ng-bind-html="$ctrl.script.css | htmlCode"></div>
+  <div ng-bind-html="$ctrl.script.html | htmlCode"></div>
   <div bind-html-with-js="$ctrl.script.js | htmlCode"></div>
 
 </div>
